# ai-engine

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
resource/knowledge/virtual_card/: card_upgrade_policy.md  developer_api_v2.md  fee_and_limit.txt  security_protocols.txt
resource/knowledge/virtual_insurance/: accident_policy_v1.txt  claim_and_status.txt  claim_qa_guide.md  travel_insurance_rules.md
resource/prompts/: default.yaml  virtual_card.yaml  virtual_insurance.yaml
scripts/: init_db.sql  init_knowledge_db.py
src/ai_engine/: server.py
src/ai_engine/chains/: chat_chain.py
src/ai_engine/core/: logger.py  prompt_manager.py  settings.py
src/ai_engine/infra/db/: base_model.py  mixins.py  pgsql.py
src/ai_engine/infra/llm/: message_adapter.py
src/ai_engine/models/: chat_message.py  chat_session.py
src/ai_engine/repository/: chat_repository.py
